Fixed ancor tags

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 </head>
 <body>
     <div id="sidebar">
-        <a href="https://github.com/gulzarsuhail/linear_regression_visualize">Click here for source code</a>
+        <a class="source" href="https://github.com/gulzarsuhail/linear_regression_visualize" target="_blank">Click here for source code</a>
     </div>
     <div id="header">
-        <a href="/">
+        <a href="/" target="_blank">
             <span id="logo">
                 <span class="webname">ml playground</span>
                 <span class="desc">LINEAR REGRESSION</span>
